feat(UE4-SDK): update api-gateway session management

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -82,6 +82,7 @@ LobbyServerUrl="wss://api.prod05.gamepublisher.example/lobby/"
 BasicServerUrl="https://api.prod06.gamepublisher.example/basic"
 CloudStorageServerUrl="api.prod07.gamepublisher.example/binary-store"
 GameProfileServerUrl="https://api.prod08.gamepublisher.example/soc-profile"
+StatisticServerUrl="https://api.prod08.gamepublisher.example/statistic"
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 bSupportsPortraitOrientation=False
