feat(sdk): update to v2.1.0

--- a/Plugins/AccelByteUe4Sdk/AccelByteUe4Sdk.uplugin
+++ b/Plugins/AccelByteUe4Sdk/AccelByteUe4Sdk.uplugin
@@ -17,7 +17,8 @@
     {
       "Name": "AccelByteUe4Sdk",
       "Type": "Runtime",
-      "LoadingPhase": "PreDefault"
+      "LoadingPhase": "PreDefault",
+      "WhitelistPlatforms" :  [ "Win32" , "Win64" , "Linux" ]
     },
   ]     
 }
