feat(sdk): update to release 2.6.0

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -30,6 +30,16 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 [Core.Log]
 LogOnline=VeryVerbose
 
+[/Script/AccelByteUe4Sdk.AccelByteServerSettings]
+ClientId=MyClient Id
+ClientSecret=My Cient Secret
+Namespace=My Namespace
+PublisherNamespace=My PublisherNamespace
+RedirectURI="http://127.0.0.1"
+IamServerUrl="https://api.prod01.gamepublisher.example/iam"
+DSMServerUrl="https://api.prod01.gamepublisher.example/dsm"
+StatisticServerUrl="https://api.prod01.gamepublisher.example/statistic"
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
