feat(sdk): update to release 2.7.0

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -30,16 +30,6 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 [Core.Log]
 LogOnline=VeryVerbose
 
-[/Script/AccelByteUe4Sdk.AccelByteServerSettings]
-ClientId=MyClient Id
-ClientSecret=My Cient Secret
-Namespace=My Namespace
-PublisherNamespace=My PublisherNamespace
-RedirectURI="http://127.0.0.1"
-IamServerUrl="https://api.prod01.gamepublisher.example/iam"
-DSMServerUrl="https://api.prod01.gamepublisher.example/dsm"
-StatisticServerUrl="https://api.prod01.gamepublisher.example/statistic"
-
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -81,6 +71,17 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 
+[/Script/AccelByteUe4Sdk.AccelByteServerSettings]
+ClientId=MyClient Id
+ClientSecret=My Cient Secret
+Namespace=My Namespace
+PublisherNamespace=My PublisherNamespace
+RedirectURI="http://127.0.0.1"
+IamServerUrl="https://prod01.gamepublisher.example/iam"
+DSMServerUrl="https://prod01.gamepublisher.example/dsm"
+StatisticServerUrl="https://prod01.gamepublisher.example/statistic"
+PlatformServerUrl="https://prod01.gamepublisher.example/platform"
+
 [/Script/AccelByteUe4Sdk.AccelByteSettings]
 ClientId=MyClient Id
 ClientSecret=My Cient Secret
@@ -93,6 +94,7 @@ BasicServerUrl="https://api.prod06.gamepublisher.example/basic"
 CloudStorageServerUrl="api.prod07.gamepublisher.example/binary-store"
 GameProfileServerUrl="https://api.prod08.gamepublisher.example/soc-profile"
 StatisticServerUrl="https://api.prod08.gamepublisher.example/statistic"
+QosManagerServerUrl="https://prod08.gamepublisher.example/qosm"
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 bSupportsPortraitOrientation=False
