feat(sdk): update to release 2.13.0

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -97,6 +97,7 @@ GameProfileServerUrl="https://api.prod08.gamepublisher.example/soc-profile"
 StatisticServerUrl="https://api.prod08.gamepublisher.example/statistic"
 QosManagerServerUrl="https://prod08.gamepublisher.example/qosm"
 LeaderboardServerUrl="https://api.prod10.gamepublisher.example/leaderboard"
+GameTelemetryServerUrl="https://api.prod11.gamepublisher.example/game-telemetry"
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 bSupportsPortraitOrientation=False
