feat(sdk): update to release 2.15.0

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -89,6 +89,8 @@ ClientId=MyClient Id
 ClientSecret=My Cient Secret
 Namespace=My Namespace
 PublisherNamespace=My PublisherNamespace
+BaseUrl="https://api.prod01.gamepublisher.example"
+NonApiBaseUrl="https://prod01.gamepublisher.example"
 IamServerUrl="https://api.prod01.gamepublisher.example/iam"
 PlatformServerUrl="https://api.prod03.gamepublisher.example/platform"
 LobbyServerUrl="wss://api.prod05.gamepublisher.example/lobby/"
