--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -77,30 +77,31 @@ ClientSecret=My Cient Secret
 Namespace=My Namespace
 PublisherNamespace=My PublisherNamespace
 RedirectURI="http://127.0.0.1"
-IamServerUrl="https://demo.gamepublisher.example/iam"
-DSMServerUrl="https://demo.gamepublisher.example/dsm"
-StatisticServerUrl="https://demo.gamepublisher.example/statistic"
-PlatformServerUrl="https://demo.gamepublisher.example/platform"
-QosManagerServerUrl="https://demo.gamepublisher.example/qosm"
-GameTelemetryServerUrl="https://demo.gamepublisher.example/game-telemetry"
+IamServerUrl="https://demo.accelbyte.io/iam"
+DSMServerUrl="https://demo.accelbyte.io/dsm"
+StatisticServerUrl="https://demo.accelbyte.io/statistic"
+PlatformServerUrl="https://demo.accelbyte.io/platform"
+QosManagerServerUrl="https://demo.accelbyte.io/qosm"
+GameTelemetryServerUrl="https://demo.accelbyte.io/game-telemetry"
 
 [/Script/AccelByteUe4Sdk.AccelByteSettings]
 ClientId=MyClient Id
 ClientSecret=My Cient Secret
 Namespace=My Namespace
 PublisherNamespace=My PublisherNamespace
-BaseUrl="https://api.prod01.gamepublisher.example"
-NonApiBaseUrl="https://prod01.gamepublisher.example"
-IamServerUrl="https://api.prod01.gamepublisher.example/iam"
-PlatformServerUrl="https://api.prod03.gamepublisher.example/platform"
-LobbyServerUrl="wss://api.prod05.gamepublisher.example/lobby/"
-BasicServerUrl="https://api.prod06.gamepublisher.example/basic"
-CloudStorageServerUrl="api.prod07.gamepublisher.example/binary-store"
-GameProfileServerUrl="https://api.prod08.gamepublisher.example/soc-profile"
-StatisticServerUrl="https://api.prod08.gamepublisher.example/statistic"
-QosManagerServerUrl="https://prod08.gamepublisher.example/qosm"
-LeaderboardServerUrl="https://api.prod10.gamepublisher.example/leaderboard"
-GameTelemetryServerUrl="https://api.prod11.gamepublisher.example/game-telemetry"
+BaseUrl="https://api.demo.accelbyte.io"
+NonApiBaseUrl="https://demo.accelbyte.io"
+IamServerUrl="https://api.demo.accelbyte.io/iam"
+PlatformServerUrl="https://api.demo.accelbyte.io/platform"
+LobbyServerUrl="wss://demo.accelbyte.io/lobby/"
+BasicServerUrl="https://api.demo.accelbyte.io/basic"
+CloudStorageServerUrl="https://api.demo.accelbyte.io/binary-store"
+GameProfileServerUrl="https://api.demo.accelbyte.io/soc-profile"
+StatisticServerUrl="https://api.demo.accelbyte.io/statistic"
+QosManagerServerUrl="https://api.demo.accelbyte.io/qosm"
+LeaderboardServerUrl="https://api.demo.accelbyte.io/leaderboard"
+GameTelemetryServerUrl="https://api.demo.accelbyte.io/game-telemetry"
+AgreementServerUrl="https://api.demo.accelbyte.io/agreement"
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 bSupportsPortraitOrientation=False
