feat(sdk): update to release 2.17.0

--- a/Plugins/AccelByteUe4Sdk/AccelByteUe4Sdk.uplugin
+++ b/Plugins/AccelByteUe4Sdk/AccelByteUe4Sdk.uplugin
@@ -13,12 +13,18 @@
 	"CanContainContent": false,
 	"IsBetaVersion": false,
 	"Installed": false,
-  "Modules": [
-    {
-      "Name": "AccelByteUe4Sdk",
-      "Type": "Runtime",
-      "LoadingPhase": "PreDefault",
-      "WhitelistPlatforms" :  [ "Win32" , "Win64" , "Linux" ]
-    },
-  ]     
+	"Modules": [
+		{
+			"Name": "AccelByteUe4Sdk",
+			"Type": "Runtime",
+			"LoadingPhase": "PreDefault",
+			"WhitelistPlatforms": [ "Win32", "Win64", "Linux" ]
+		}
+	],
+	"Plugins": [
+		{
+			"Name": "Agones",
+			"Enabled": true
+		}
+	]
 }
