--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -44,3 +44,10 @@ bSkipEditorContent=False
 +DirectoriesToAlwaysStageAsUFS=(Path="Certificates")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
+
+[/Script/Agones.AgonesSettings]
+bHealthPingEnabled=False
+RequestRetryLimit=0
+bSendReadyAtStartup=False
+HealthPingSeconds=9999.000000
+
