feat(sdk): update to release 2.18.6

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -83,6 +83,7 @@ StatisticServerUrl="https://demo.accelbyte.io/statistic"
 PlatformServerUrl="https://demo.accelbyte.io/platform"
 QosManagerServerUrl="https://demo.accelbyte.io/qosm"
 GameTelemetryServerUrl="https://demo.accelbyte.io/game-telemetry"
+LeaderboardServerUrl="https://demo.accelbyte.io/leaderboard"
 
 [/Script/AccelByteUe4Sdk.AccelByteSettings]
 ClientId=MyClient Id
