feat(sdk): update to release 2.22.0

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -105,6 +105,7 @@ GameTelemetryServerUrl="https://api.demo.accelbyte.io/game-telemetry"
 AgreementServerUrl="https://api.demo.accelbyte.io/agreement"
 CloudSaveServerUrl="https://api.demo.accelbyte.io/cloudsave"
 AchievementServerUrl="https://api.demo.accelbyte.io/achievement"
+AppId=My AppId
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 bSupportsPortraitOrientation=False
