Remove UE4 plugin whitelist. Allow plugin to be used on all platforms.

--- a/Plugins/AccelByteUe4Sdk/AccelByteUe4Sdk.uplugin
+++ b/Plugins/AccelByteUe4Sdk/AccelByteUe4Sdk.uplugin
@@ -17,8 +17,7 @@
 		{
 			"Name": "AccelByteUe4Sdk",
 			"Type": "Runtime",
-			"LoadingPhase": "PreDefault",
-			"WhitelistPlatforms": [ "Win32", "Win64", "Linux" ]
+			"LoadingPhase": "PreDefault"
 		}
 	],
 	"Plugins": [
